--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue-sweetalert2": "^4.3.1"
     }
 }
